@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.68])
-AC_INIT([Aspis], [0.2], [ilguido@users.sf.net])
+AC_INIT([Aspis], [0.5], [ilguido@users.sf.net])
 AC_CONFIG_SRCDIR([src/index_dir.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])
@@ -34,10 +34,11 @@ AC_ARG_ENABLE([utf8],[AS_HELP_STRING([--enable-utf8],[UTF-8 encoded URLs])],USE_
 AC_ARG_ENABLE([auth],[AS_HELP_STRING([--enable-auth],[basic authentication support])],USE_AUTH="yes", USE_AUTH="no")
 AC_ARG_ENABLE([inet6],[AS_HELP_STRING([--enable-inet6],[ipv6 addressing])],USE_INET6="yes", USE_INET6="no")
 AC_ARG_ENABLE([gunzip],[AS_HELP_STRING([--enable-gunzip],[compressed web pages])],USE_GUNZIP="yes", USE_GUNZIP="no")
+AC_ARG_ENABLE([ac],[AS_HELP_STRING([--enable-ac],[support for access control])],USE_AC="yes", USE_AC="no")
 
 if test $USE_UNICODE = yes ; then 
   CFLAGS="$CFLAGS -DUSE_UNICODE"
-  AC_MSG_RESULT([url encoding with utf-8... yes])
+  AC_MSG_RESULT([url encoding with utf-8... enabled])
 else
   USE_UNICODE=0
 fi
@@ -46,7 +47,7 @@ if test $USE_AUTH = yes ; then
   CFLAGS="$CFLAGS -DUSE_AUTH"
   LIBS="$LIBS -lcrypt"
   AM_CONDITIONAL([USE_AUTH], [test xtrue = xtrue])
-  AC_MSG_RESULT([basic authentication... yes])
+  AC_MSG_RESULT([basic authentication... enabled])
 else
   AM_CONDITIONAL([USE_AUTH], [test xtrue = xfalse])
   USE_AUTH=0
@@ -54,16 +55,29 @@ fi
 
 if test $USE_INET6 = yes ; then 
   CFLAGS="$CFLAGS -DUSE_INET6"
-  AC_MSG_RESULT([IP version 6... yes])
+  AC_MSG_RESULT([IP version 6... enabled])
 else
   USE_INET6=0
 fi
 
 if test $USE_GUNZIP = yes ; then 
   CFLAGS="$CFLAGS -DUSE_GUNZIP"
-  AC_MSG_RESULT([http compression... yes])
+  AC_MSG_RESULT([http compression... enabled])
 else
   USE_GUNZIP=0
+fi
+
+if test $USE_AC = yes ; then 
+  CFLAGS="$CFLAGS -DUSE_AC"
+  AC_MSG_RESULT([access control... enabled])
+  AC_CHECK_HEADER(fnmatch.h, [have_fnmatch="yes"], [have_fnmatch="no"])
+  if test $have_fnmatch = no ; then
+    AC_MSG_ERROR([could not find fnmatch.h (needed by access control)])
+  fi
+  AM_CONDITIONAL([USE_AC], [test xtrue = xtrue])
+else
+  USE_AC=0
+  AM_CONDITIONAL([USE_AC], [test xtrue = xtrue])
 fi
 
 if test x$uname == xSunOS; then
