@@ -9,8 +9,8 @@
 
   <h3>Possible causes</h3>
   You typed the wrong URL.<br/>
-  The file non longer exist<br />
-  An internal error occurred<br /> <br />
+  The file no longer exists.<br />
+  An internal error occurred.<br /> <br />
   <hr />
   Powered by Aspis
   </body>
